// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NonUqOrgAffiliationFormSection tests  should render component with both values 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={1}
>
  <ForwardRef(Grid)
    item={true}
    sm={6}
    xs={6}
  >
    <ForwardRef(TextField)
      InputLabelProps={
        Object {
          "data-testid": "org-affiliation-name-label",
        }
      }
      fullWidth={true}
      id="org-affiliation-name"
      inputProps={
        Object {
          "data-testid": "org-affiliation-name",
        }
      }
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      value="Test"
      variant="standard"
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    sm={6}
    xs={6}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      required={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        data-testid="org-affiliation-type-label"
        id="org-affiliation-type-label"
      >
        Organisation type
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        SelectDisplayProps={
          Object {
            "data-testid": "org-affiliation-type",
            "id": "org-affiliation-type",
          }
        }
        labelId="org-affiliation-type-label"
        name="org-affiliation-type"
        onChange={[MockFunction]}
        value="453987"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          disabled={true}
        >
          Select an organisation type
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453985"
          value="453985"
        >
          Government
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453986"
          value="453986"
        >
          NGO
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453987"
          value="453987"
        >
          Foundation
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453989"
          value="453989"
        >
          University
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453990"
          value="453990"
        >
          Other
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`NonUqOrgAffiliationFormSection tests  should render component with defaults 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={1}
>
  <ForwardRef(Grid)
    item={true}
    sm={6}
    xs={6}
  >
    <ForwardRef(TextField)
      InputLabelProps={
        Object {
          "data-testid": "org-affiliation-name-label",
        }
      }
      fullWidth={true}
      id="org-affiliation-name"
      inputProps={
        Object {
          "data-testid": "org-affiliation-name",
        }
      }
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      value=""
      variant="standard"
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    sm={6}
    xs={6}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      required={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        data-testid="org-affiliation-type-label"
        id="org-affiliation-type-label"
      >
        Organisation type
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        SelectDisplayProps={
          Object {
            "data-testid": "org-affiliation-type",
            "id": "org-affiliation-type",
          }
        }
        labelId="org-affiliation-type-label"
        name="org-affiliation-type"
        onChange={[MockFunction]}
        value=""
        variant="standard"
      >
        <ForwardRef(MenuItem)
          disabled={true}
        >
          Select an organisation type
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453985"
          value="453985"
        >
          Government
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453986"
          value="453986"
        >
          NGO
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453987"
          value="453987"
        >
          Foundation
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453989"
          value="453989"
        >
          University
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453990"
          value="453990"
        >
          Other
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`NonUqOrgAffiliationFormSection tests  should render component with organisation affiliation type value 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={1}
>
  <ForwardRef(Grid)
    item={true}
    sm={6}
    xs={6}
  >
    <ForwardRef(TextField)
      InputLabelProps={
        Object {
          "data-testid": "org-affiliation-name-label",
        }
      }
      fullWidth={true}
      id="org-affiliation-name"
      inputProps={
        Object {
          "data-testid": "org-affiliation-name",
        }
      }
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      value=""
      variant="standard"
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    sm={6}
    xs={6}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      required={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        data-testid="org-affiliation-type-label"
        id="org-affiliation-type-label"
      >
        Organisation type
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        SelectDisplayProps={
          Object {
            "data-testid": "org-affiliation-type",
            "id": "org-affiliation-type",
          }
        }
        labelId="org-affiliation-type-label"
        name="org-affiliation-type"
        onChange={[MockFunction]}
        value="453987"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          disabled={true}
        >
          Select an organisation type
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453985"
          value="453985"
        >
          Government
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453986"
          value="453986"
        >
          NGO
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453987"
          value="453987"
        >
          Foundation
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453989"
          value="453989"
        >
          University
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453990"
          value="453990"
        >
          Other
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`NonUqOrgAffiliationFormSection tests  should render component with organisation affiliation value 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={1}
>
  <ForwardRef(Grid)
    item={true}
    sm={6}
    xs={6}
  >
    <ForwardRef(TextField)
      InputLabelProps={
        Object {
          "data-testid": "org-affiliation-name-label",
        }
      }
      fullWidth={true}
      id="org-affiliation-name"
      inputProps={
        Object {
          "data-testid": "org-affiliation-name",
        }
      }
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      value="Test"
      variant="standard"
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    sm={6}
    xs={6}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      required={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        data-testid="org-affiliation-type-label"
        id="org-affiliation-type-label"
      >
        Organisation type
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        SelectDisplayProps={
          Object {
            "data-testid": "org-affiliation-type",
            "id": "org-affiliation-type",
          }
        }
        labelId="org-affiliation-type-label"
        name="org-affiliation-type"
        onChange={[MockFunction]}
        value=""
        variant="standard"
      >
        <ForwardRef(MenuItem)
          disabled={true}
        >
          Select an organisation type
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453985"
          value="453985"
        >
          Government
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453986"
          value="453986"
        >
          NGO
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453987"
          value="453987"
        >
          Foundation
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453989"
          value="453989"
        >
          University
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453990"
          value="453990"
        >
          Other
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`NonUqOrgAffiliationFormSection tests  should render full width input fields 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={1}
>
  <ForwardRef(Grid)
    item={true}
    sm={6}
    xs={12}
  >
    <ForwardRef(TextField)
      InputLabelProps={
        Object {
          "data-testid": "org-affiliation-name-label",
        }
      }
      fullWidth={true}
      id="org-affiliation-name"
      inputProps={
        Object {
          "data-testid": "org-affiliation-name",
        }
      }
      label="Organisation"
      onChange={[MockFunction]}
      required={true}
      value="Test"
      variant="standard"
    />
  </ForwardRef(Grid)>
  <ForwardRef(Grid)
    item={true}
    sm={6}
    xs={12}
  >
    <ForwardRef(FormControl)
      fullWidth={true}
      required={true}
      variant="standard"
    >
      <ForwardRef(InputLabel)
        data-testid="org-affiliation-type-label"
        id="org-affiliation-type-label"
      >
        Organisation type
      </ForwardRef(InputLabel)>
      <ForwardRef(Select)
        SelectDisplayProps={
          Object {
            "data-testid": "org-affiliation-type",
            "id": "org-affiliation-type",
          }
        }
        labelId="org-affiliation-type-label"
        name="org-affiliation-type"
        onChange={[MockFunction]}
        value="453987"
        variant="standard"
      >
        <ForwardRef(MenuItem)
          disabled={true}
        >
          Select an organisation type
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453983"
          value="453983"
        >
          Library/Museum/Public Gallery
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453984"
          value="453984"
        >
          Commercial Gallery
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453985"
          value="453985"
        >
          Government
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453986"
          value="453986"
        >
          NGO
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453987"
          value="453987"
        >
          Foundation
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453988"
          value="453988"
        >
          Corporate/Industry
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453989"
          value="453989"
        >
          University
        </ForwardRef(MenuItem)>
        <ForwardRef(MenuItem)
          key="453990"
          value="453990"
        >
          Other
        </ForwardRef(MenuItem)>
      </ForwardRef(Select)>
    </ForwardRef(FormControl)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;
